# DiscordFS

./: .env.example  .gitignore  README.md  pyproject.toml
discordfs/: __init__.py  __main__.py  chunker.py  config.py  crypto.py  db.py  discord_store.py  fs.py  retry.py  sync.py  utils.py
tests/: test_cache.py  test_chunker.py  test_crypto.py  test_db.py  test_retry.py
